[package]
name = "rctl"
version = "0.0.6-alpha.0"
authors = ["Fabian Freyer <fabian.freyer@physik.tu-berlin.de>"]
description = "FreeBSD resource limits and accounting with RCTL / RACCT"
license = "BSD-3-Clause"
keywords = ["freebsd"]
categories = ["os:unix-apis", "api-bindings"]
readme = "README.md"
repository = "https://github.com/fubarnetes/rctl"
documentation = "https://fubarnetes.github.io/rctl/rctl/"

[badges]
maintenance = { status = "experimental" }
is-it-maintained-issue-resolution = { repository = "fubarnetes/rctl" }
is-it-maintained-open-issues = { repository = "fubarnetes/rctl" }

[features]
serialize = ["serde", "serde_json"]

[dependencies]
failure = "0.1"
libc = "0.2"
nix = "0.13"
number_prefix = "0.2"
sysctl = "0.3"
serde = { version="1.0", features = ["derive"], optional=true }
serde_json = { version="1.0", optional=true }
