[package]
name = "rctl"
version = "0.3.0"
authors = ["Fabian Freyer <fabian.freyer@physik.tu-berlin.de>"]
description = "FreeBSD resource limits and accounting with RCTL / RACCT"
license = "BSD-3-Clause"
keywords = ["freebsd"]
categories = ["os::freebsd-apis", "os::unix-apis", "api-bindings"]
readme = "README.md"
repository = "https://github.com/fubarnetes/rctl"
rust-version = "1.70.0"
documentation = "https://docs.rs/rctl"
edition = "2021"

[badges]
maintenance = { status = "experimental" }
is-it-maintained-issue-resolution = { repository = "fubarnetes/rctl" }
is-it-maintained-open-issues = { repository = "fubarnetes/rctl" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
  "x86_64-unknown-freebsd",
]

[features]
serialize = ["serde", "serde_json"]

[dependencies]
libc = "0.2.155"
nix = { version = "0.29", default-features = false, features = [ "signal", "user" ] }
number_prefix = "0.4"
sysctl = ">=0.5.0, < 0.7"
serde = { version="1.0.113", features = ["derive"], optional=true }
serde_json = { version="1.0", optional=true }
thiserror = "2.0.3"
